# dutpilot

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/dutpilot/: SKILL.md
.agents/skills/dutpilot/references/: report-schema.md  testbench-contract.md
.agents/skills/dutpilot/scripts/: verify_icarus.sh
docs/: agent-contract.md  agent-demo.md  async-fifo-agent-prompt.md  build-your-own-skill.md  failure-repair-demo.md  testbench-contract.md
dutpilot/: __init__.py  cli.py  config.py  log_parser.py  project.py  report.py  runner.py  wave.py
dutpilot/simulators/: __init__.py  base.py  icarus.py
examples/adder/: adder.v  dutpilot.yaml  tb_adder.v
examples/buggy_counter/: counter.v  dutpilot.yaml  tb_counter.v
examples/fifo/: dutpilot.yaml  sync_fifo.v  tb_sync_fifo.v
scripts/: compile_icarus.sh  run_icarus.sh
tests/: test_log_parser.py  test_project.py  test_report.py  test_wave.py
