[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dutpilot"
version = "0.1.1"
description = "CLI-first, agent-friendly RTL simulation harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "DUTPilot contributors" }
]
keywords = ["rtl", "verilog", "systemverilog", "simulation", "icarus", "eda"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = []

[project.scripts]
dutpilot = "dutpilot.cli:main"

[tool.setuptools.packages.find]
include = ["dutpilot*"]
